--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.MegaPelis"
         tools:targetApi="31">
         <activity
-            android:name=".HomeUserActivity"
+            android:name=".app.activity.user.HomeUserActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
