feat:Se agrega fragmentos del inicio usuario.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,8 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'com.squareup.picasso:picasso:2.8'
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.android.material:material:1.7.0'
 
     implementation 'com.dropbox.core:dropbox-core-sdk:5.4.4'
